# multi-agent-fraud-detection

./: .env.example  .gitignore  Polabathina Ramcharan Teja.README.md  Polabathina Ramcharan Teja.Solution.md  Presentation.md  Presentation_LLM_Prompt.md  README.md  Solution.md  demo.py  presentation.html  pyproject.toml  run.sh  scratch_remove_emojis.py
Agents/: blacklist_agent.md  customer_agent.md  device_agent.md  geo_agent.md  guardrail_agent.md  llm_reasoning_agent.md  ml_risk_agent.md  overview.md  rule_agent.md  velocity_agent.md
dashboard/: index.css  index.html  index.js
dashboard-react/: package-lock.json  package.json
dashboard-react/src/: App.jsx  index.css
ml/: feature_names.json  model.pkl  synthetic_data.py  train_model.py  training_data.csv
src/: __init__.py  simple_server.py
src/agents/: base.py  decision_engine.py  guardrail_agent.py
src/agents/specialist/: __init__.py  device_agent.py  geo_agent.py  llm_reasoning.py  velocity_agent.py
src/agents/tier1/: __init__.py  blacklist_agent.py  customer_agent.py  ml_risk_agent.py  rule_agent.py
src/governance/: __init__.py  policy_enforcer.py  rules.py
src/infrastructure/: __init__.py  audit_store.py  cache.py  event_bus.py  metrics.py
src/ingress/: __init__.py  deduplicator.py  normalizer.py  server.py  validator.py
src/mcp/: __init__.py  gateway.py
src/mcp/servers/: __init__.py  geo_server.py  (+5 more)
src/models/: __init__.py  agent_output.py  config.py  decision.py  transaction.py
src/orchestrator/: __init__.py  budget.py  decision_gate.py  dispatcher.py  engine.py
tests/: test_e2e.py
